--- a/.env
+++ b/.env
@@ -34,3 +34,9 @@ PORT="5000"
 # File Upload Configuration
 # MAX_FILE_SIZE="10MB"
 # UPLOAD_PATH="./uploads"
+
+DO_SPACES_ENDPOINT=https://sfo3.digitaloceanspaces.com
+DO_SPACES_BUCKET_NAME=spearwin
+DO_SPACES_REGION=sfo3
+DO_SPACES_ACCESS_KEY=DO00VHTAXGT38B43BUKK
+DO_SPACES_SECRET_KEY=NdRv04O4aeX36kGOLgQLfrNvd6IU4o27e6shA8l2dic
