--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.3",
     "firebase-admin": "^12.7.0",
+    "google-auth-library": "^10.4.2",
     "helmet": "^8.1.0",
     "multer": "^2.0.2",
     "passport": "^0.7.0",
