--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/throttler": "^6.4.0",
     "@prisma/client": "^6.16.2",
     "@types/multer": "^2.0.0",
+    "@types/nodemailer": "^7.0.3",
     "@types/qrcode": "^1.5.5",
     "@types/speakeasy": "^2.0.10",
     "@types/uuid": "^10.0.0",
@@ -44,6 +45,7 @@
     "google-auth-library": "^10.4.2",
     "helmet": "^8.1.0",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.10",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
