--- a/.env
+++ b/.env
@@ -22,11 +22,13 @@ BCRYPT_ROUNDS="10"
 NODE_ENV="development"
 PORT="5000"
 
-# Email Configuration (if using email services)
-# SMTP_HOST="smtp.gmail.com"
-# SMTP_PORT="587"
-# SMTP_USER="your-email@gmail.com"
-# SMTP_PASS="your-app-password"
+# Email Configuration
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=webnoxbackend@gmail.com
+SMTP_PASS=jmef qpsr slbk ycyn
+SMTP_FROM=webnoxbackend@gmail.com
 
 # Redis Configuration (if using Redis for caching)
 # REDIS_URL="redis://localhost:6379"
