--- a/.env
+++ b/.env
@@ -23,12 +23,12 @@ NODE_ENV="development"
 PORT="5000"
 
 # Email Configuration
-SMTP_HOST=smtp.gmail.com
+SMTP_HOST=smtp.office365.com
 SMTP_PORT=587
 SMTP_SECURE=false
-SMTP_USER=webnoxbackend@gmail.com
-SMTP_PASS=jmef qpsr slbk ycyn
-SMTP_FROM=webnoxbackend@gmail.com
+SMTP_USER=noreply@spearwin.com
+SMTP_PASS=Webnox$01
+SMTP_FROM=noreply@spearwin.com
 
 # Redis Configuration (if using Redis for caching)
 # REDIS_URL="redis://localhost:6379"
