--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "migrate:extract": "ts-node scripts/extract-sql-data.ts",
+    "migrate:candidates": "ts-node scripts/migrate-candidates.ts",
+    "migrate:gallery": "ts-node scripts/migrate-gallery.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.919.0",
