--- a/.env.backup
+++ b/.env.backup
@@ -31,14 +31,23 @@ PORT="5000"
 # SMTP_FROM=noreply@spearwin.com
 
 
+# Password:hmxgbytqphycgsnx
+# Password name:spearwin
 
-# Email Configuration
-SMTP_HOST=smtp.gmail.com
+# # Email Configuration
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_SECURE=false
+# SMTP_USER=webnoxbackend@gmail.com
+# SMTP_PASS=jmef qpsr slbk ycyn
+# SMTP_FROM=webnoxbackend@gmail.com
+
+
+SMTP_HOST=smtp.office365.com
 SMTP_PORT=587
 SMTP_SECURE=false
-SMTP_USER=webnoxbackend@gmail.com
-SMTP_PASS=jmef qpsr slbk ycyn
-SMTP_FROM=webnoxbackend@gmail.com
+SMTP_USER=noreply@spearwin.com
+SMTP_PASS=hmxgbytqphycgsnx
 
 
 
