--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/throttler": "^6.4.0",
     "@prisma/client": "^6.16.2",
     "@types/bcrypt": "^6.0.0",
+    "@types/nodemailer": "^7.0.4",
     "@types/qrcode": "^1.5.5",
     "@types/speakeasy": "^2.0.10",
     "@types/uuid": "^10.0.0",
@@ -44,6 +45,7 @@
     "helmet": "^8.1.0",
     "multer": "^2.0.2",
     "multer-s3": "^3.0.1",
+    "nodemailer": "^7.0.11",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
