--- a/.env
+++ b/.env
@@ -22,25 +22,25 @@ BCRYPT_ROUNDS="10"
 NODE_ENV="development"
 PORT="5000"
 
-# Email Configuration
-# SMTP_HOST=smtp.office365.com
-# SMTP_PORT=587
-# SMTP_SECURE=false
-# SMTP_USER=noreply@spearwin.com
-# SMTP_PASS=Webnox$01
-# SMTP_FROM=noreply@spearwin.com
-
-
-
-# Email Configuration
-SMTP_HOST=smtp.gmail.com
+SMTP_HOST=smtp.office365.com
 SMTP_PORT=587
 SMTP_SECURE=false
-SMTP_USER=webnoxbackend@gmail.com
-SMTP_PASS=jmef qpsr slbk ycyn
-SMTP_FROM=webnoxbackend@gmail.com
+SMTP_USER=noreply@spearwin.com
+SMTP_PASS=ssfdqwvtrgvryvfv
+
+GRAPH_CLIENT_ID=1fd333b3-c2de-4bce-94fd-0b856ecb81a1
+GRAPH_CLIENT_SECRET=h418Q~6h.aVQgG4lZZ7wnteZ6amNW1LdcSbUtb_0
+GRAPH_TENANT_ID=b96f64f1-7096-49f5-bdfc-c615590d091f
+GRAPH_USER_EMAIL=noreply@spearwin.com
+GRAPH_FROM_NAME=SpearWin
+APP_NAME=SpearWin
 
 
+# Email Configuration (if using email services)
+# SMTP_HOST="smtp.gmail.com"
+# SMTP_PORT="587"
+# SMTP_USER="your-email@gmail.com"
+# SMTP_PASS="your-app-password"
 
 # Redis Configuration (if using Redis for caching)
 # REDIS_URL="redis://localhost:6379"
@@ -49,13 +49,9 @@ SMTP_FROM=webnoxbackend@gmail.com
 # MAX_FILE_SIZE="10MB"
 # UPLOAD_PATH="./uploads"
 
+# DigitalOcean Spaces Configuration
 DO_SPACES_ENDPOINT=https://sfo3.digitaloceanspaces.com
-DO_SPACES_BUCKET_NAME=spearwin
+DO_SPACES_BUCKET=spearwin
 DO_SPACES_REGION=sfo3
 DO_SPACES_ACCESS_KEY=DO00VHTAXGT38B43BUKK
 DO_SPACES_SECRET_KEY=NdRv04O4aeX36kGOLgQLfrNvd6IU4o27e6shA8l2dic
-# Gmail SMTP Configuration
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_SECURE=false
-SMTP_FROM=gokul03903@gmail.com
