--- a/.gitignore
+++ b/.gitignore
@@ -57,7 +57,10 @@ jspm_packages/
 .yarn-integrity
 
 # dotenv environment variables file
-
+.env
+.env.local
+.env.*.local
+*.env
 
 # parcel-bundler cache
 .cache
